Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24541

"Load Core File" does not work with symbol file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.14.0
    • Qt Creator 4.12.0
    • Debugger
    • None
    • Linux/X11
    • 5467faa0d7916674403480724d44341555c16102

      Using Debug > Load Core File specifying a symbol file instead of the executable with debug symbols is not working.

      The symbol file seems fine since it is working if imported manually within gdb using symbol-file /path/to/program.debug and it was generated with

      objcopy --only-keep-debug program program.debug
      

       

      Looking at the source code it seems that the file is loaded unconditionally with -file-exec-and-symbols instead of -file-symbol-file.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            mrota Manuel Rota
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes