Debugger: Use -file-symbol-file for core files with GDB

Task-number: QTCREATORBUG-24541
Change-Id: Ib6d070629f5a7d1505c272ce78f99dc14cd15fdc
Reviewed-by: Christian Stenger <christian.stenger@qt.io>